--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-13  Neil Booth  <neil@daikokuya.co.uk>
+
+	* c-opts.c (c_common_init_options): Extra braces needed.
+
 Tue Aug 13 17:40:25 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* sh.c (sh_init_builtins): Add PARAMS to declaration.
