--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-13  Jesse Rosenstock  <jmr@fulcrummicro.com>
+
+	For PR java/7483:
+	* parse.y (build_assertion): Invert return from
+	desiredAssertionStatus.
+
 2002-08-08  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
 
 	* jcf-write.c (get_access_flags): Return correct access flags for 
