--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-13  Jesse Rosenstock  <jmr@fulcrummicro.com>
+
+	* java/io/RandomAccessFile.java (skipBytes): Return number of
+	bytes skipped.
+
 2002-08-01  Mark Wielaard  <mark@klomp.org>
 
 	Reenable patch since shared library troubles on powerpc are solved:
