* Makefile.in (attribs.o): Remove $(OBSTACK_H) dependency.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56266 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-13  Geoffrey Keating  <geoffk@redhat.com>
+
+	* Makefile.in (attribs.o): Remove $(OBSTACK_H) dependency.
+
 2002-08-13  Neil Booth  <neil@daikokuya.co.uk>
 
 	* c-opts.c (c_common_init_options): Extra braces needed.
