--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-14  Gabriel Dos Reis  <gdr@nerim.net>
+
+	* tree.h: Guard against multiple inclusion.
+
 2002-08-14  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* reload1.c (reload_cse_simplify): Before checking
