--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2002-08-14  Alexandre Oliva  <aoliva@redhat.com>
+
+	* boehm-gc/configure, libf2c/configure: Rebuilt.
+	* libffi/configure, libiberty/configure: Ditto.
+	* libjava/configure, libobjc/configure: Ditto.
+	* libstdc++-v3/configure, zlib/configure: Ditto.
+	Merged from binutils:
+	2002-01-27  Daniel Jacobowitz  <drow@mvista.com>
+	From Steve Ellcey <sje@cup.hp.com>:
+	* libtool.m4 (HPUX_IA64_MODE): Set to 32 or 64 based on ABI.
+	(lt_cv_deplibs_check_method, lt_cv_file_magic_cmd,
+	lt_cv_file_magic_test_file): Set to appropriate values for HP-UX
+	IA64.
+	* ltcf-c.sh (archive_cmds, hardcode_*): Ditto.
+	* ltconfig (shlibpath_*, dynamic_linker, library_names_spec,
+	soname_spec, sys_lib_search_path_spec): Ditto.
+
 2002-08-06  Federico G. Schwindt <fgsch@olimpo.com.br>
 
 	* configure.in (hppa*-*-openbsd*): Treat like hppa*-*-*elf*.
