--- a/gcc/config/m68hc11/m68hc11.md
+++ b/gcc/config/m68hc11/m68hc11.md
@@ -6279,12 +6279,14 @@
   ""
  "*
 {
+  int far_call = current_function_far;
+
   if (GET_CODE (XEXP (operands[0], 0)) == SYMBOL_REF)
     {
       if (SYMBOL_REF_FLAG (XEXP (operands[0], 0)) == 1)
         return \"swi\";
       else
-        return \"bsr\\t%0\";
+        return far_call ? \"call\\t%0\" : \"bsr\\t%0\";
     }
   else
     {
@@ -6299,12 +6301,14 @@
   ""
  "*
 {
+  int far_call = current_function_far;
+
   if (GET_CODE (XEXP (operands[1], 0)) == SYMBOL_REF)
     {
       if (SYMBOL_REF_FLAG (XEXP (operands[1], 0)) == 1)
         return \"swi\";
       else
-        return \"bsr\\t%1\";
+        return far_call ? \"call\\t%1\" : \"bsr\\t%1\";
     }
   else
     {
@@ -6418,7 +6422,7 @@
     return \"\";
   if (current_function_interrupt || current_function_trap)
     return \"rti\";
-  return \"rts\";
+  return current_function_far ? \"rtc\" : \"rts\";
 }")
 
 (define_insn "*return_16bit"
@@ -6435,7 +6439,7 @@
     return \"\";
   if (current_function_interrupt || current_function_trap)
     return \"rti\";
-  return \"rts\";
+  return current_function_far ? \"rtc\" : \"rts\";
 }")
 
 (define_insn "*return_32bit"
@@ -6452,7 +6456,7 @@
     return \"\";
   if (current_function_interrupt || current_function_trap)
     return \"rti\";
-  return \"rts\";
+  return current_function_far ? \"rtc\" : \"rts\";
 }")
 
 (define_insn "indirect_jump"
