--- a/gcc/config/m68hc11/m68hc11.md
+++ b/gcc/config/m68hc11/m68hc11.md
@@ -1666,7 +1666,7 @@
   [(set (match_operand:QI 0 "nonimmediate_operand" "=d,m")
 	(umin:QI (match_operand:QI 1 "nonimmediate_operand" "%0,0")
 		 (match_operand:QI 2 "general_operand" "m,d")))]
-  "TARGET_M6812"
+  "TARGET_M6812 && TARGET_MIN_MAX"
   "*
 {
   /* Flags are set according to (sub:QI (operand 1) (operand2)).
@@ -1688,7 +1688,7 @@
   [(set (match_operand:QI 0 "nonimmediate_operand" "=d,m")
 	(umax:QI (match_operand:QI 1 "nonimmediate_operand" "%0,0")
 		 (match_operand:QI 2 "general_operand" "m,d")))]
-  "TARGET_M6812"
+  "TARGET_M6812 && TARGET_MIN_MAX"
   "*
 {
   /* Flags are set according to (sub:QI (operand 1) (operand2)).
@@ -1710,7 +1710,7 @@
   [(set (match_operand:HI 0 "nonimmediate_operand" "=d,m")
 	(umin:HI (match_operand:HI 1 "nonimmediate_operand" "%0,0")
 		 (match_operand:HI 2 "general_operand" "m,d")))]
-  "TARGET_M6812"
+  "TARGET_M6812 && TARGET_MIN_MAX"
   "*
 {
   /* Flags are set according to (sub:HI (operand 1) (operand2)).  */
@@ -1729,7 +1729,7 @@
   [(set (match_operand:HI 0 "nonimmediate_operand" "=d,m")
 	(umax:HI (match_operand:HI 1 "nonimmediate_operand" "%0,0")
 		 (match_operand:HI 2 "general_operand" "m,d")))]
-  "TARGET_M6812"
+  "TARGET_M6812 && TARGET_MIN_MAX"
   "*
 {
   /* Flags are set according to (sub:HI (operand 1) (operand2)).  */
