--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-14  Mark Mitchell  <mark@codesourcery.com>
+
+	* gennews (files): Add GCC 3.2 files.
+
 2002-07-25  Release Manager
 
 	* GCC 3.1.1 Released.
