--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-14  Release Manager
+
+	* GCC 3.2 Released.
+
 2002-08-04  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	* news.texi: Mention nothing changed for 3.2.
