--- a/contrib/ChangeLog
+++ b/contrib/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-14  Release Manager
+
+	* GCC 3.2 Released.
+
 2002-08-14  Mark Mitchell  <mark@codesourcery.com>
 
 	* gennews (files): Add GCC 3.2 files.
