--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-14  Release Manager
+
+	* GCC 3.2 Released.
+
 2002-08-08  Jakub Jelinek  <jakub@redhat.com>
 
 	* config/rs6000/rs6000.h, config/rs6000/aix.h,
