--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-14  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* m88k.h (ASM_OUTPUT_SOURCE_FILENAME): Fix incorrect argument
+	order in call to fprintf.
+
 2002-08-14  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* config/sparc/sol2.h (SUBTARGET_EXTRA_SPECS): Define.
