--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-14  Neil Booth  <neil@daikokuya.co.uk>
+
+	* c-opts.c (c_common_post_options): Correct test.
+
 2002-08-14  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* m88k.h (ASM_OUTPUT_SOURCE_FILENAME): Fix incorrect argument
