--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-08-14  Dale Johannesen  <dalej@apple.com>
+
+        * explow.c (emit_stack_restore):  Emit memory clobbers
+	preceding the stack pop, to prevent the scheduler from
+	moving refs to variable arrays below this pop.
+	* reload1.c (reload):  Preserve these clobbers for sched2.
+	* doc/rtl.texi:  Document clobber (mem:BLK (scratch)).
+
 2002-08-14  Neil Booth  <neil@daikokuya.co.uk>
 
 	* c-opts.c (c_common_post_options): Correct test.
