--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-14  Gabriel Dos Reis  <gdr@nerim.net>
+
+	Fix PR/7566
+	* c-semantics.c (genrtl_case_label): Don't (mis)use
+	warning_with_decl. 
+
 2002-08-14  Dale Johannesen  <dalej@apple.com>
 
         * explow.c (emit_stack_restore):  Emit memory clobbers
